@@ -1,5 +1,5 @@
 /**
- * 
+ *
  */
 package com.retailer.rewards.service;
 
@@ -8,7 +8,6 @@ import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.*;
 
 import org.springframework.stereotype.Service;
 
@@ -42,8 +41,8 @@ public class CustomerRewardsCalculatorSvcImpl implements CustomerRewardsCalculat
 		Integer rewards = this.findUnrewardedAmountSpentInAQuarter(customerTransDetails);
 
 		log.debug("setting reward point values to monthly averages and quarterly elgibile rewards");
-		customersTransactionData.stream()
-				.filter(customer -> customer.getCustomerId().equalsIgnoreCase(customerId)).forEach(customer -> {
+		customersTransactionData.stream().filter(customer -> customer.getCustomerId().equalsIgnoreCase(customerId))
+				.forEach(customer -> {
 					customer.setAccruedRewardsPerQuarter(rewards);
 					customer.setAverageRewardsPerMonth(rewards);
 				});
@@ -74,12 +73,14 @@ public class CustomerRewardsCalculatorSvcImpl implements CustomerRewardsCalculat
 		log.debug("finding reward eligible transactions in a quarter for this customer");
 
 		List<TransactionDetails> rewardsEligibleTransactionList = customerTransactionDetails.stream()
-				.filter(transaction -> !transaction.getIsTransactionAlreadyRewarded()).filter(transaction -> (Duration
-						.between(LocalDate.of(2022, 5, 15).atStartOfDay(), transaction.getTransactionDate()).toDays() < 90))
-				.collect(Collectors.toList());
+				.filter(transaction -> !transaction.getIsTransactionAlreadyRewarded())
+				.filter(transaction -> (Duration
+						.between(LocalDate.of(2022, 5, 15).atStartOfDay(), transaction.getTransactionDate())
+						.toDays() < 90))
+				.toList();
 
-		Double totalSpentAmount = rewardsEligibleTransactionList.stream().map(TransactionDetails::getTotalSpentAmount).reduce(0.00,
-				(sum, elt) -> sum + elt);
+		Double totalSpentAmount = rewardsEligibleTransactionList.stream().map(TransactionDetails::getTotalSpentAmount)
+				.reduce(0.00, (sum, elt) -> sum + elt);
 
 		if (totalSpentAmount == null || totalSpentAmount == 0.00) {
 			log.error("no rewards earned");
@@ -93,7 +94,8 @@ public class CustomerRewardsCalculatorSvcImpl implements CustomerRewardsCalculat
 				? totalSpentAmount - Double.valueOf(50.0) * 1
 				: 0;
 
-		Integer accruedRewards = rewardPointsForSpentAmountGreaterThan50.intValue() + rewardPointsForSpentAmountGreaterThan100.intValue();
+		Integer accruedRewards = rewardPointsForSpentAmountGreaterThan50.intValue()
+				+ rewardPointsForSpentAmountGreaterThan100.intValue();
 		log.debug("reward points accrued by customer : {} ", accruedRewards);
 		this.updatePaidRewardsStatus(rewardsEligibleTransactionList);
 		return accruedRewards;
@@ -108,7 +110,7 @@ public class CustomerRewardsCalculatorSvcImpl implements CustomerRewardsCalculat
 
 		log.debug("preparing and injecting mock data during application boot up");
 		/**
-		 * one transaction lesser than 50 and one transaction greater than 100
+		 * one transaction is lesser than $50 and one transaction greater than $100
 		 */
 
 		TransactionDetails trans1cust1 = new TransactionDetails(true, CurrencyInfo.USD, 33.0,
@@ -119,7 +121,7 @@ public class CustomerRewardsCalculatorSvcImpl implements CustomerRewardsCalculat
 		Customer customer1 = new Customer(0, 0, "C1", Arrays.asList(trans1cust1, trans2cust1));
 
 		/**
-		 * Both transactions are greater than 100
+		 * Both transactions are greater than $100
 		 */
 		TransactionDetails trans1cust2 = new TransactionDetails(false, CurrencyInfo.USD, 111.0,
 				LocalDate.of(2022, 12, 12).atStartOfDay(), "3");
@@ -129,33 +131,33 @@ public class CustomerRewardsCalculatorSvcImpl implements CustomerRewardsCalculat
 		Customer customer2 = new Customer(0, 0, "C2", Arrays.asList(trans1cust2, trans2cust2));
 
 		/**
-		 * Both transactions are less than 50
+		 * Both transactions are less than $50
 		 */
 		TransactionDetails trans1cust3 = new TransactionDetails(false, CurrencyInfo.USD, 44.0,
 				LocalDate.of(2022, 12, 12).atStartOfDay(), "5");
-		TransactionDetails trans2cust3 = new TransactionDetails(false, CurrencyInfo.USD, 25.0, 
+		TransactionDetails trans2cust3 = new TransactionDetails(false, CurrencyInfo.USD, 25.0,
 				LocalDate.of(2022, 12, 12).atStartOfDay(), "6");
 
 		Customer customer3 = new Customer(0, 0, "C3", Arrays.asList(trans1cust3, trans2cust3));
 
 		/**
-		 * some transactions are already rewarded and
-		 * some transactions are less than $50 and not rewarded
+		 * some transactions are already rewarded and some transactions are less than
+		 * $50 and not rewarded
 		 */
-		TransactionDetails trans1cust4 = new TransactionDetails(true, CurrencyInfo.USD, 999.99, 
+		TransactionDetails trans1cust4 = new TransactionDetails(true, CurrencyInfo.USD, 999.99,
 				LocalDate.of(2021, 12, 12).atStartOfDay(), "7");
-		TransactionDetails trans2cust4 = new TransactionDetails(false, CurrencyInfo.USD, 49.99, 
+		TransactionDetails trans2cust4 = new TransactionDetails(false, CurrencyInfo.USD, 49.99,
 				LocalDate.of(2021, 12, 12).atStartOfDay(), "8");
 
 		Customer customer4 = new Customer(0, 0, "C4", Arrays.asList(trans1cust4, trans2cust4));
-		
+
 		/**
-		 * one transaction is less than 50
-		 * one transaction greater than $50 but less than $100
+		 * one transaction is less than $50 one transaction greater than $50 but less
+		 * than $100
 		 */
-		TransactionDetails trans1cust5 = new TransactionDetails(true, CurrencyInfo.USD, 11.99, 
+		TransactionDetails trans1cust5 = new TransactionDetails(true, CurrencyInfo.USD, 11.99,
 				LocalDate.of(2021, 12, 12).atStartOfDay(), "9");
-		TransactionDetails trans2cust5 = new TransactionDetails(false, CurrencyInfo.USD, 69.99, 
+		TransactionDetails trans2cust5 = new TransactionDetails(false, CurrencyInfo.USD, 69.99,
 				LocalDate.of(2021, 12, 12).atStartOfDay(), "10");
 
 		Customer customer5 = new Customer(0, 0, "C5", Arrays.asList(trans1cust5, trans2cust5));
